Authorization code flow impl + Auth server; Fixes (#31)